# weather-underground

cli/: Cargo.toml
cli/src/: main.rs
influxdb-bridge/: Cargo.toml
influxdb-bridge/src/: server.rs
