[package]
name = "weather-underground-cli"
description = "Weather Underground parser cli"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "readme.md"
homepage = "https://github.com/jdrouet/weather-underground"
repository = "https://github.com/jdrouet/weather-underground"
keywords = ["weather", "parse"]

[dependencies]
clap = { version = "3.2", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
weather-underground = { path = "../library", version = "0.1" }
